# Serverless-Real-Time-Fraud-Intelligence

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  SECURITY_IMPLEMENTATION_SUMMARY.md  demo_server.py  pyproject.toml  pytest.ini  repro_concurrency.py  test_models_validation.py  test_schema_simple.py  test_simple_models.py
.github/workflows/: deploy.yml
.kiro/specs/sentinel-aml/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/steering/: aml-domain-knowledge.md  aws-integration.md  ml-best-practices.md  project-overview.md
configs/: deployment-development.json  deployment-production.json  development.yaml  production.yaml
docs/: DEPLOYMENT_GUIDE.md  architecture.md  gremlin_schema_queries.txt  gremlin_validation_queries.txt  neptune_schema.json  security-implementation.md  security_implementation_summary.md  transaction_ingestion_implementation.md
docs/schema/: neptune_schema.json
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/public/: index.html
frontend/src/: App.tsx  index.css
frontend/src/components/: AlertsList.tsx  Layout.tsx  MetricCard.tsx  Pagination.tsx  RealTimePredictions.tsx  RiskDistributionChart.tsx  TransactionChart.tsx  TransactionGraphVisualization.tsx
frontend/src/contexts/: ApiContext.tsx
frontend/src/pages/: AlertDetail.tsx  Alerts.tsx  Analytics.tsx  Dashboard.tsx  ReportDetail.tsx  Reports.tsx  Settings.tsx
frontend/src/types/: index.ts
infrastructure/: app.py  cdk.json  requirements.txt
infrastructure/stacks/: __init__.py  api_gateway_stack.py  lambda_stack.py  monitoring_stack.py  neptune_stack.py  security_stack.py  step_functions_stack.py
notebooks/: 01_data_exploration.ipynb
scripts/: deploy.py  export_schema.py  export_schema_simple.py  notify.py  setup.py
src/lambda/: fraud_scoring.py  sar_generator.py
src/models/: gnn_training.py
src/sentinel_aml/: __init__.py
src/sentinel_aml/api/: __init__.py  alert_handler.py  alerts_handler.py  health_handler.py  report_handler.py  reports_handler.py  transaction_handler.py
src/sentinel_aml/compliance/: __init__.py  audit_logger.py  audit_storage.py  compliance_reporter.py  confidence_scoring.py  fincen_sar_formatter.py  sar_versioning.py
src/sentinel_aml/core/: __init__.py  config.py  exceptions.py  logging.py  utils.py
src/sentinel_aml/data/: __init__.py  models.py  neptune_client.py  schema.py
src/sentinel_aml/lambdas/: __init__.py  connection_pool.py  fraud_scorer.py  fraud_scoring_handler.py  transaction_processor.py
src/sentinel_aml/ml/: __init__.py  feature_extractor.py  gnn_training_pipeline.py  neptune_ml.py
src/sentinel_aml/orchestration/: __init__.py  status_tracker.py  trigger_handler.py  workflow_manager.py
src/sentinel_aml/security/: __init__.py  access_control.py  data_at_rest_encryption.py  encryption.py  iam_integration.py  pii_protection.py  security_validator.py  tls_config.py
tests/: __init__.py  conftest.py  conftest_simple.py
tests/deployment/: test_infrastructure_deployment.py
tests/integration/: test_api_gateway_integration.py  test_bedrock_integration.py  test_security_integration.py  test_security_tasks_complete.py  test_step_functions_integration.py  test_transaction_ingestion.py  test_transaction_ingestion_comprehensive.py  test_transaction_ingestion_recovery.py  test_transaction_ingestion_task_3_4.py
tests/property/: README.md  __init__.py  run_property_tests.py  test_api_endpoints_properties.py  test_api_properties.py  test_fraud_scoring_properties.py  test_graph_schema_properties.py  test_orchestration_properties.py  test_sar_generation_properties.py  test_security_properties.py  test_transaction_processing_properties.py
tests/smoke/: test_deployment_smoke.py
tests/unit/: README.md  __init__.py  test_config.py  test_gnn_scoring.py  test_gnn_scoring_logic.py  test_model_edge_cases.py  test_models.py  test_neptune_client.py  test_schema.py  test_security_access_control.py  test_security_components.py  test_security_comprehensive.py  test_security_encryption.py  test_security_pii_protection.py  test_transaction_processor.py  test_transaction_processor_simple.py  test_utils.py
