[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sentinel-aml"
version = "0.1.0"
description = "AI-powered Anti-Money Laundering detection platform using graph neural networks and generative AI"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Sentinel AML Team", email = "team@sentinel-aml.com"}
]
keywords = ["aml", "anti-money-laundering", "ai", "graph-neural-networks", "aws", "neptune", "bedrock"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Office/Business :: Financial",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # Core dependencies
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    
    # AWS SDK and services
    "boto3>=1.34.0",
    "botocore>=1.34.0",
    
    # Security and encryption
    "cryptography>=41.0.0",
    "requests>=2.31.0",
    
    # Graph and ML libraries
    "gremlinpython>=3.7.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    
    # API and web framework
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    
    # Utilities
    "python-json-logger>=2.0.0",
    "structlog>=23.0.0",
    "tenacity>=8.2.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.0",
    "hypothesis>=6.88.0",
    
    # Code quality
    "black>=23.9.0",
    "isort>=5.12.0",
    "flake8>=6.1.0",
    "mypy>=1.6.0",
    "bandit>=1.7.5",
    
    # Development tools
    "pre-commit>=3.5.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.25.0",
]

cdk = [
    "aws-cdk-lib>=2.100.0",
    "constructs>=10.3.0",
]

ml = [
    # Machine learning and data science
    "scikit-learn>=1.3.0",
    "torch>=2.1.0",
    "networkx>=3.2.0",
    # Note: DGL will be installed separately due to version compatibility
]

[project.urls]
Homepage = "https://github.com/sentinel-aml/sentinel-aml"
Documentation = "https://sentinel-aml.readthedocs.io"
Repository = "https://github.com/sentinel-aml/sentinel-aml.git"
Issues = "https://github.com/sentinel-aml/sentinel-aml/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.json", "*.yaml", "*.yml", "*.toml"]

# Black configuration
[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | cdk.out
)/
'''

# isort configuration
[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["sentinel_aml"]

# mypy configuration
[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "gremlinpython.*",
    "dgl.*",
    "torch.*",
]
ignore_missing_imports = true

# pytest configuration
[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "unit: Unit tests",
    "integration: Integration tests", 
    "property: Property-based tests",
    "slow: Slow running tests",
    "aws: Tests requiring AWS credentials",
]

# Coverage configuration
[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/cdk/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]